--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.jsflax.relay.SplashActivity">
 
     <android.support.design.widget.AppBarLayout
@@ -22,14 +23,5 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_splash"/>
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        android:src="@android:drawable/btn_plus"/>
-
+    <include layout="@layout/content_splash" />
 </android.support.design.widget.CoordinatorLayout>
