--- a/ui/src/main/res/layout/fg_chat_some.xml
+++ b/ui/src/main/res/layout/fg_chat_some.xml
@@ -1,57 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/chat_recycler_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+    <RelativeLayout
+        android:id="@+id/chat_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/balconyGray"
-        android:layout_above="@+id/action_divider"/>
+        android:layout_above="@+id/action_divider">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/chat_recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/balconyGray"/>
+    </RelativeLayout>
+
     <View
         android:id="@+id/action_divider"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/divider"
-        android:layout_above="@+id/message_Layout"/>
-    <LinearLayout
+        android:layout_above="@+id/message_Layout"
+        android:background="@color/divider"/>
+
+    <RelativeLayout
         android:id="@+id/message_Layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:layout_alignParentBottom="true"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:layout_marginRight="@dimen/activity_horizontal_margin">
+        android:orientation="horizontal">
+
+        <ImageButton
+            android:id="@+id/button_emoticon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:background="?selectableItemBackgroundBorderless"
+            android:src="@drawable/ic_mood_24dp"/>
 
         <EditText
             android:id="@+id/message_edit_text"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@android:color/transparent"
+            android:layout_centerVertical="true"
             android:layout_marginBottom="@dimen/margin3"
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            android:layout_marginRight="@dimen/activity_horizontal_margin"
             android:layout_marginTop="@dimen/margin2"
+            android:layout_toLeftOf="@+id/send"
+            android:layout_toRightOf="@id/button_emoticon"
+            android:background="@android:color/transparent"
             android:hint="@string/write_a_message"/>
-        <RelativeLayout
-            android:layout_width="match_parent"
+
+        <ImageButton
+            android:id="@+id/send"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginBottom="@dimen/margin3">
-            <ImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_mood_24dp"
-                android:layout_alignParentLeft="true"
-                android:layout_centerVertical="true"
-                android:background="?selectableItemBackgroundBorderless"/>
-            <ImageButton
-                android:id="@+id/send"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_send_24dp"
-                android:layout_alignParentRight="true"
-                android:padding="@dimen/padding3"
-                android:background="@drawable/ic_ripple_blue_circle"/>
-        </RelativeLayout>
-    </LinearLayout>
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:background="?selectableItemBackground"
+            android:padding="@dimen/activity_horizontal_margin"
+            android:src="@drawable/ic_send_24dp"/>
+    </RelativeLayout>
 </RelativeLayout>
