--- a/ui/src/main/res/layout/fg_user_some.xml
+++ b/ui/src/main/res/layout/fg_user_some.xml
@@ -3,11 +3,15 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_marginLeft="@dimen/activity_horizontal_margin"
+    android:layout_marginRight="@dimen/activity_horizontal_margin"
+    android:layout_marginBottom="@dimen/activity_vertical_margin">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_centerInParent="true"
         android:orientation="vertical">
 
         <LinearLayout
@@ -35,7 +39,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/change"
-                android:textColor="@android:color/white"/>
+                android:textColor="@android:color/white"
+                style="@style/CustomButton"/>
         </LinearLayout>
 
         <LinearLayout
@@ -62,16 +67,16 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/change"
-                android:textColor="@android:color/white"/>
+                android:textColor="@android:color/white"
+                style="@style/CustomButton"/>
         </LinearLayout>
 
         <com.facebook.drawee.view.SimpleDraweeView
             android:id="@+id/avatar_image"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_width="@dimen/margin125"
+            android:layout_height="@dimen/margin125"
             android:layout_gravity="center"
             android:layout_marginBottom="@dimen/margin8"
-            android:layout_weight="1"
             android:background="?selectableItemBackgroundBorderless"
             android:paddingBottom="@dimen/padding14"
             android:paddingLeft="@dimen/padding28"
@@ -92,6 +97,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:text="@string/change"
-            android:textColor="@android:color/white"/>
+            android:textColor="@android:color/white"
+            style="@style/CustomButton"/>
     </LinearLayout>
 </RelativeLayout>
